# MiniDB

./: CMakeLists.txt  build.sh
include/: BPlusTree.hpp  Block.hpp  Buffer.hpp  BufferManager.hpp  DBColumn.hpp  DBException.hpp  DBIndex.hpp  DBRow.hpp  Header.hpp  Index.hpp  JsonSerializer.hpp  Page.hpp
libs/bit_converter/: bit_converter.hpp
libs/catch2/: catch.hpp
libs/magic_enum/: magic_enum.hpp
src/: BPlusTree.cpp  Block.cpp  Buffer.cpp  BufferManager.cpp  DBColumn.cpp  DBIndex.cpp  DBRow.cpp  Header.cpp  Index.cpp  JsonSerializer.cpp  Main.cpp  Page.cpp
test/: TestBPlusTree.cpp  TestBuffer.cpp  TestBufferManager.cpp  TestPage.cpp  TestUtils.cpp  TestUtils.hpp
